updated guide to include info about app transport security.

--- a/RottenTomatoesSwift/RottenTomatoesSwift/Info.plist
+++ b/RottenTomatoesSwift/RottenTomatoesSwift/Info.plist
@@ -45,10 +45,15 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>flixster.com</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 			<key>rottentomatoes.com</key>
 			<dict>
 				<key>NSIncludesSubdomains</key>
